   Then build a nice interface into it.
 * Localization

12.XX.2000	-	0.12.1

 * Fixed bug in vote adding with inccorect variable name.
 * Fixed bug where bugnote text not properl deleted when bug deleted
 * Uncluttered large portions of code
 * Fixed another problem with the date created being updated improperly when
   dealing with bugnotes.

12.20.2000	-	0.12.0

 * Fixed problem with viewing filters not working with Netscape
 * Tweaked the string_edit() function
 * Added $g_show_login_date_info and the ability to show who is logged in and
   the current time
 * Modified bugnotes to be ordered by date_submitted
 * Added protection to prevent anyone from deleting bugnotes
 * Used LAST_INSERT_ID() to ensure that bug and bugnote insertion is correct
 * Reporting a bug now stores a link to the account profile (if chosen)
 * The information from the profile is displayed (if chosen at report time) in
   the advanced bug view
 * Added a hide resolved viewing filter option
 * Summary shows time statistics for resolved bugs
 * Added support to show bugs reported by and assigned to the logged in user.
 * Added view_user_assigned_bug_page.php3 and view_user_reported_bug_page.php3
   and the corresponding global variables
 * Tweaked the bug update and bugnote update and delete functions to redirect
   to the user chosen default viewing level page

12.15.2000	-	0.11.1

 * Added projection and eta to be passed as hidden info by the simple update
   page.
 * Fixed a missing </TD> tag on the report bug pages.  Messed up old 4.x unix
   Netscape.
 * Modified the priority to print counts of all bugs.
 * Wrapped the global cookie _val variables in if (isset()) blocks.  Seemed to
   cause some troubles on some setups.

12.12.2000	-	0.11.0

 * Profiles can be used for advanced bug submission
 * Added summary by date
 * Added priority on the summary page
 * Added profile management
 * Added a confirmation before an admin can delete an account